dodane generowanie tablicy crc32 i obliczanie na sztywno reszty kontrolnej

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script type="text/javascript" src="js/hamming.js"></script>
     <script type="text/javascript" src="js/parrity.js"></script>
     <script type="text/javascript" src="js/globalUsed.js"></script>
+    <script type="text/javascript" src="js/crc.js"></script>
 
 </head>
 
@@ -258,7 +259,14 @@
                 </h2>
             </div>
 
-        </div>
+            <div class="col-xl-6 col-md-12">
+
+                <div class="col-md-12 m-auto">
+                    <button  type="button" class="btn btn-secondary btn-block" onclick="crc()">Generacja zakłóceń</button>
+                </div>
+            </div>
+
+            </div>
         </div>
 
             <div class="col-xl-6 col-md-12">
