--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <script type="text/javascript" src="js/parrity.js"></script>
     <script type="text/javascript" src="js/globalUsed.js"></script>
     <script type="text/javascript" src="js/crc.js"></script>
+    <script type="text/javascript" src="js/completeCoding.js"></script>
 
 </head>
-
 <body>
 
     <header class="p-0 bg-dark" ID="myNavBar">
@@ -55,7 +55,7 @@
                             <a class="nav-link" id="crc-tab" data-toggle="tab" href="#crc" role="tab" aria-controls="crc" aria-selected="false" onclick="setCRC();">CRC</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" id="compare-tab" data-toggle="tab" href="#compare" role="tab" aria-controls="compare" aria-selected="false" onclick="setAll();">Porównanie</a>
+                            <a class="nav-link" id="compare-tab" data-toggle="tab" href="#compare" role="tab" aria-controls="compare" aria-selected="false" onclick="setAll();">Całkowite Kododawnie</a>
                         </li>
                     </ul>
                 </div>
@@ -108,7 +108,7 @@
                                     </select>
                                 </div>
                                 <div class="form-group m-auto col-12" id="genereteWordParrity" style="display: none">
-                                    <button  type="button" class="btn btn-secondary w-100" Onclick="GenerateWord()">Generuj losowe słowo (1-12)</button>
+                                    <button  type="button" class="btn btn-secondary w-100" Onclick="GenerateWord()">Generuj losowe słowo (10-20)</button>
                                 </div>
                                 <div class="form-group m-auto col-12" id="genereteDecParrity">
                                     <button  type="button" class="btn btn-secondary w-100" Onclick="GenerateDec()">Generuj losową liczbę (1-99)</button>
@@ -188,7 +188,7 @@
                                 </select>
                             </div>
                             <div class="form-group m-auto col-12" id="genereteWordHamming" style="display: none">
-                                <button  type="button" class="btn btn-secondary w-100" Onclick="GenerateWord()">Generuj losowe słowo (1-12)</button>
+                                <button  type="button" class="btn btn-secondary w-100" Onclick="GenerateWord()">Generuj losowe słowo (10-20)</button>
                             </div>
                             <div class="form-group m-auto col-12" id="genereteDecHamming">
                                 <button  type="button" class="btn btn-secondary w-100" Onclick="GenerateDec()">Generuj losową liczbę (1-99)</button>
@@ -271,7 +271,7 @@
                                     </select>
                                 </div>
                                 <div class="form-group m-auto col-12" id="genereteWordCRC" style="display: none">
-                                    <button  type="button" class="btn btn-secondary w-100" Onclick="GenerateWord()">Generuj losowe słowo (1-12)</button>
+                                    <button  type="button" class="btn btn-secondary w-100" Onclick="GenerateWord()">Generuj losowe słowo (10-20)</button>
                                 </div>
                                 <div class="form-group m-auto col-12" id="genereteDecCRC">
                                     <button  type="button" class="btn btn-secondary w-100" Onclick="GenerateDec()">Generuj losową liczbę (1-99)</button>
@@ -344,9 +344,125 @@
 
             <div class="tab-pane fade" id="compare" role="tabpanel" aria-labelledby="compare-tab">
                 <h2>
-                    Porównanie
+                    Całkowite kodowanie
                     <hr class="w-50">
                 </h2>
+
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <form class="my-4">
+                            <div class="form-row align-items-center  col-md-12 m-auto">
+                                <div class="col-12">
+                                    <label for="thing2convertAll">Wprowadź słowo</label>
+                                    <textarea type="text" class="form-control mb-2" id="thing2convertAll" placeholder="  "></textarea>
+                                </div>
+                                <hr class="w-100">
+                                <div class="form-group m-auto col-12">
+                                    <label for="typeOfInputAll">Typ słowa</label>
+                                    <select id="typeOfInputAll" class="form-control" onchange="onTypeChange()">
+                                        <option selected>Tekst</option>
+                                        <option>Liczba decymalna</option>
+                                        <option>Liczba binarna</option>
+                                    </select>
+                                </div>
+                                <div class="form-group m-auto col-12" id="genereteWordAll">
+                                    <button  type="button" class="btn btn-secondary w-100" Onclick="GenerateWord()">Generuj losowe słowo (10-20)</button>
+                                </div>
+                                <div class="form-group m-auto col-12" id="genereteDecAll"  style="display: none">
+                                    <button  type="button" class="btn btn-secondary w-100" Onclick="GenerateDec()">Generuj losową liczbę (1-99)</button>
+                                </div>
+                                <div class="form-group m-auto col-12" id="genereteBinAll"  style="display: none">
+                                    <button  type="button" class="btn btn-secondary w-100" Onclick="GenerateBin()">Generuj losową liczbę (1-99)</button>
+                                </div>
+
+                                <hr class="w-100">
+
+                                <div class="form-group m-auto col-12">
+                                    <label for="typeOfCRCAll">Typ CRC</label>
+                                    <select id="typeOfCRCAll" class="form-control" onchange="onCRCTypeChange()">
+                                        <option selected>CRC 12</option>
+                                        <option>CRC 16</option>
+                                        <option>CRC 16 REVERSE</option>
+                                        <option>CRC 32</option>
+                                        <option>SDLC</option>
+                                        <option>SDLC REVERSE</option>
+                                        <option>CRC-ITU</option>
+                                        <option>ATM</option>
+                                    </select>
+                                </div>
+
+                                <hr class="w-100">
+
+                                <div class=" w-50 m-auto">
+                                    <button  type="button" class="btn btn-secondary w-100" Onclick="CodeAll()">konwertuj</button>
+                                </div>
+                            </div>
+                        </form>
+
+                        <div class="col-md-12 m-auto" id="StepsButton" style="display: block" >
+                            <button  type="button" class="btn btn-secondary btn-block" data-toggle="collapse" data-target="#Steps" aria-expanded="false" aria-controls="multiCollapseExample2">Wyświetl poszczególne kroki</button>
+                        </div>
+
+                        <div class="card col-md-12 m-auto mt-3" id="StepsCard" style="display: block" >
+                            <div class="collapse multi-collapse py-2" id="Steps">
+
+                                    <div class="card  col-md-12 m-auto">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Słowo po przekonwertowaniu na system binarny</h5>
+                                            <hr class="w-100">
+                                            <span id="binpacketAll">
+                                           </span>
+                                        </div>
+                                    </div>
+
+                                <hr class="w-100">
+
+                                <div class="card  col-md-12 m-auto">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Obliczenie i dodanie Sumy kontrolnej</h5>
+                                        <hr class="w-100">
+                                        <span id="crcOutput">
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <hr class="w-100">
+
+                        <div class="card  col-md-12 m-auto">
+                            <div class="card-body">
+                                <h5 class="card-title">Ramka z sumą kontrolną oraz po kodowaniu kodem Hamminga</h5>
+                                <hr class="w-100">
+                                <textarea class="form-control" id="outputconvertAll" rows="3"></textarea>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class=" offset-xl-3  offset-md-0  col-md-6 col-sm-12 py-2">
+                        <button  type="button" class="btn btn-secondary btn-block" Onclick="checkCode()">Sprawdź kod powyżej</button>
+                    </div>
+
+
+
+                    <div class="card col-md-12 m-auto">
+                        <div class="card-body">
+                            <h5 class="card-title">Słowo po sprawdzeniu poprawności za pomoca kodu Hamminga
+                            </h5>
+                            <hr class="w-100">
+                            <span id="checkoutputHammingAll">
+
+                            </span>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
             </div>
             </div>
         </div>
@@ -362,7 +478,7 @@
 
                         <div class="col-12">
                             <label for="noiseFrequency">Wprowadź procentową szansę na wystąpienie szumu</label>
-                            <input type="number" min="0" max="100" class="form-control mb-2" id="noiseFrequency" value="50">
+                            <input type="number" min="0" max="100" class="form-control mb-2" id="noiseFrequency" value="100">
                         </div>
                         <hr class="w-100">
                         <div class="form-group m-auto col-12">
@@ -372,8 +488,8 @@
                                 <option>Pojedynczy bit w słowie</option>
                                 <option>Pojedynczy bit w tekście</option>
                                 <option id="HammingOption">Bit kontrolny oraz kod w pojedynczym słowie w tekście</option>
-                                <option id="CompareOption">Bit kontrolny oraz kod w pojedynczym słowie w tekście</option>
-
+                                <option id="CompareOption1">Bit w bloku danych (Scenariusz 2)</option>
+                                <option id="CompareOption2">Bit w bloku danych oraz bit w sumie kontrolnej (scenariusz 3)</option>
                             </select>
                         </div>
 
@@ -400,6 +516,25 @@
 
                             </span>
                         </div>
+
+                        <div class="card-body" id="removeHammingCard">
+
+                            <h5 class="card-title">Słowo po usunięciu bitów kontrolnych</h5>
+                            <hr class="w-100">
+                            <span id="removeHammingOutput">
+
+                        </span>
+                        </div>
+
+                        <div class="card-body" id="checkoutputCRCAllCard">
+                            <h5 class="card-title">Słowo po sprawdzeniu poprawności za pomoca sumy kontrolnej
+                            </h5>
+                            <hr class="w-100">
+                            <span id="checkoutputCRCAll">
+
+                            </span>
+                        </div>
+
                         <div class="card-body">
 
                             <h5 class="card-title">Słowo po odkodowaniu</h5>
@@ -409,7 +544,6 @@
                         </span>
 
                         </div>
-
                     </div>
                 </div>
 
@@ -447,7 +581,7 @@
                             <span id="output"></span>
 
                             <hr class="w-100">
-                            Wprowadzone dane<br>
+                            Zakodowane dane<br>
                             <span id="differenceOutput"></span>
 
                             <hr class="w-100">
